refactor: remove unused components and layouts; introduce new UI components
- Deleted PostList, card, radio-group, AuthContext, AuthLayout, ProfileLayout, CompleteProfilePage, LoginPage, ProfilePage, and RegisterPage components.
- Added new Carousel, DropdownMenu, Form, Separator, and updated UI components for better structure and usability.
- Updated AppRoute to reflect the removal of old components and layouts.
- Adjusted main.tsx to remove AuthProvider and BrowserRouter for a simplified structure.
- Updated tsconfig files for improved path resolution.